# conjoint

./: .dockerignore  .gitignore  CLAUDE.md  HANDOFF.md  README.md  docker-compose.yml  plan_16_20.csv  plan_3_20.csv
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_randomize_order.py  0003_add_design_max_iter.py  0004_convert_to_uuid.py  0005_survey_instances.py  0006_orgs_users.py
backend/app/: analysis.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: analysis.py  organizations.py  stateless.py  surveys.py  users.py
backend/scripts/: import_responses.py
backend/tests/: test_analysis.py
conjoint/: README.md  __init__.py  __main__.py  _linalg.py  cli.py  design.py  scan.py  variance.py
conjoint/tests/: test_design.py
docs/: Vi skal udvikle en slags statistisk conjoint analyse.docx  kommunevalg_lodret_RUNE.xlsx
other/: rune1_design.csv
other/data/: alpha_estimates.csv  design_K16_N20.csv  raw_data.tsv
scripts/: estimate_alphas.py
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AppLayout.tsx  EntityListPage.tsx  EntityNewPage.tsx  SurveyResultCharts.tsx  TestPlanObjectsPanel.tsx  VarianceScanPanel.tsx  theme-provider.tsx
web/src/lib/: api.ts  results.ts
web/src/pages/: ConfigurationPage.tsx  OrganizationNewPage.tsx  OrganizationsPage.tsx  ParticipantPage.tsx  (+9 more)
(+20 files in other folders)
